# RepoPilotAI

./: .gitignore  README.md  pyproject.toml  sample_report.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  pipeline.py  report_agent.py  repository_analysis_agent.py
app/mcp/: __init__.py  _session_logging.py  filesystem_mcp.py  github_mcp.py  tool_registry.py
app/models/: __init__.py  analysis.py  report.py  request.py
app/prompts/: analysis_agent.md  report_agent.md
app/skills/: __init__.py  _agent_runner.py  architecture_skill.py  code_quality_skill.py  documentation_skill.py  security_skill.py
specs/: architecture.md  repopilot.feature  repopilot_spec.md
tests/integration/: test_repopilot_bdd.py
tests/unit/: test_mcp.py  test_models.py  test_pipeline.py
