[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repopilot-ai"
version = "0.1.0"
description = "AI-powered Software Engineering Intelligence Assistant built on ADK 2.0"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    # ADK 2.0 — core framework
    "google-adk>=1.0.0",
    # Pydantic v2 — data validation at every boundary
    "pydantic>=2.0.0",
    # MCP Python SDK — used by ADK MCPToolset under the hood
    "mcp>=1.0.0",
    # Rich — pretty CLI output
    "rich>=13.0.0",
    # Click — CLI argument parsing
    "click>=8.0.0",
    # Python-dotenv — load .env for local development
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-bdd>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
repopilot = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "N"]
# S101: allow assert in test files
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"evals/**/*.py" = ["S101"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 80
